--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/volley.jar')
 }
