--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -19,6 +19,7 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 23
+        multiDexEnabled true
     }
 }
 
@@ -26,11 +27,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.squareup.okhttp:okhttp:1.1.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.android.support:palette-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/volley.jar')
 }
